--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "kfoobar/laravel-dto",
     "description": "Basic Data Transfer Object for Laravel",
+    "type": "plugin",
     "license": "MIT",
     "authors": [
         {
@@ -9,13 +10,16 @@
         }
     ],
     "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
-        "php": ">=7.3",
-        "illuminate/support": "^5.5|^6|^7|^8|^9"
+        "php": "^7.4|^8.0",
+        "illuminate/database": ">=6",
+        "illuminate/http": ">=6",
+        "nesbot/carbon": "^2.0"
     },
     "autoload": {
         "psr-4": {
-            "KFoobar\\LaravelData\\": "src/KFoobar/LaravelData/"
+            "KFoobar\\Data\\": "src/"
         }
     }
 }
